Add eslint to ui and api; add video streaming on ui

--- a/web/src/public/css/main.styl
+++ b/web/src/public/css/main.styl
@@ -23,7 +23,7 @@ header
 
 	 h1
 		color: lightgrey
-		font: 48px font-family-header
+		font: 48px
 		font-weight: font-weight-header
 		margin-top: 10px
 
@@ -38,7 +38,6 @@ aside
 footer
 	font-size: 12px
 	color: color-footer-color
-
 
 @media screen and (max-width: 480px)
 	header, aside, article footer
@@ -66,7 +65,6 @@ footer
 
 	article
 		margin-left: 176px
-		max-width: 900px
 
 	footer
 		clear: both
