--- a/web/src/views/pages/index.pug
+++ b/web/src/views/pages/index.pug
@@ -1,4 +1,37 @@
 extends ../layout
 
 block main
-    h1  This is main block of the page
+    link(rel='stylesheet', href='/css/video.css')
+    .row
+      .video
+      //- .col-md-4
+      //-   .camera
+      //-     video#video Недоступно
+      //-     button#startbutton Снимок
+      //-
+      //-   canvas#canvas
+      //-
+      //-   .output
+      //-     img#photo(alt="Снимок будет тут")
+      //-
+      //- .col-md-4
+      //-   .camera
+      //-     video#video Недоступно
+      //-     button#startbutton Снимок
+      //-
+      //-   canvas#canvas
+      //-
+      //-   .output
+      //-     img#photo(alt="Снимок будет тут")
+      //-
+      //- .col-md-4
+      //-   .camera
+      //-     video#video Недоступно
+      //-     button#startbutton Снимок
+      //-
+      //-   canvas#canvas
+      //-
+      //-   .output
+      //-     img#photo(alt="Снимок будет тут")
+
+    script(src="scripts/index.js")
