--- a/web/src/public/css/main.css
+++ b/web/src/public/css/main.css
@@ -24,7 +24,7 @@ header img {
 }
 header h1 {
   color: #d3d3d3;
-  font: 48px font-family-header;
+  font: 48px;
   font-weight: 100;
   margin-top: 10px;
 }
@@ -71,7 +71,6 @@ footer {
   }
   article {
     margin-left: 176px;
-    max-width: 900px;
   }
   footer {
     clear: both;
