--- a/web/src/views/layout.pug
+++ b/web/src/views/layout.pug
@@ -8,11 +8,11 @@ html
     body
         header
           .container
-            h1 Дипломный проект
+            h1 Awesome diploma
         aside
             nav
-                a(href='/') Главная
-                a(href='/add-face/') Добавить лицо
+                a(href='/') Камеры
+                a(href='/add-face/') Добавить человека
         article
             block main
         script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js')
