--- a/web/src/views/pages/index.pug
+++ b/web/src/views/pages/index.pug
@@ -8,6 +8,11 @@ block main
         .camera
           img(id="video" src="http://localhost:8081" alt="Недоступно")
           button#startbutton Снимок
+
+      .col-md-4
+        .camera
+          img(id="video1" src="http://localhost:8082" alt="Недоступно")
+          button#startbutton1 Снимок
       //-
       //-   canvas#canvas
       //-
