--- a/web/src/public/css/video.css
+++ b/web/src/public/css/video.css
@@ -1,10 +1,12 @@
-#video {
+#video,
+#video1 {
   border: 1px solid #000;
   box-shadow: 2px 2px 3px #000;
   width: 320px;
   height: 240px;
 }
-#photo {
+#photo,
+#photo1 {
   border: 1px solid #000;
   box-shadow: 2px 2px 3px #000;
   width: 320px;
@@ -20,7 +22,8 @@
 .output {
   width: 340px;
 }
-#startbutton {
+#startbutton,
+#startbutton1 {
   display: block;
   position: relative;
   margin-left: auto;
