--- a/web/src/public/css/video.styl
+++ b/web/src/public/css/video.styl
@@ -1,10 +1,10 @@
-#video
+#video, #video1
   border: 1px solid black
   box-shadow: 2px 2px 3px black
   width:320px
   height:240px
 
-#photo
+#photo, #photo1
   border: 1px solid black
   box-shadow: 2px 2px 3px black
   width:320px
@@ -20,7 +20,7 @@
 .output
   width: 340px
 
-#startbutton
+#startbutton, #startbutton1
   display:block
   position:relative
   margin-left:auto
