add person (ui); init endpoints

--- a/web/src/public/css/video.css
+++ b/web/src/public/css/video.css
@@ -2,8 +2,8 @@
 #video1 {
   border: 1px solid #000;
   box-shadow: 2px 2px 3px #000;
-  width: 320px;
-  height: 240px;
+  width: 100%;
+  margin-bottom: 30px;
 }
 #photo,
 #photo1 {
@@ -12,11 +12,12 @@
   width: 320px;
   height: 240px;
 }
-#canvas {
+#canvas1 {
   display: none;
 }
-.camera {
-  width: 340px;
+#camera1,
+#camera2 {
+  width: 100%;
   float: left;
 }
 .output {
@@ -25,7 +26,6 @@
 #startbutton,
 #startbutton1 {
   display: block;
-  position: relative;
   margin-left: auto;
   margin-right: auto;
   bottom: 32px;
@@ -35,4 +35,14 @@
   font-size: 14px;
   font-family: "Lucida Grande", "Arial", sans-serif;
   color: #fff;
+}
+#camera-1-form {
+  margin-bottom: 30px;
+}
+.photoDiv {
+  float: left;
+  width: 50%;
+}
+.photoDiv img {
+  width: 100%;
 }
