--- a/web/src/public/css/video.styl
+++ b/web/src/public/css/video.styl
@@ -1,8 +1,8 @@
 #video, #video1
   border: 1px solid black
   box-shadow: 2px 2px 3px black
-  width:320px
-  height:240px
+  width: 100%
+  margin-bottom: 30px
 
 #photo, #photo1
   border: 1px solid black
@@ -10,11 +10,11 @@
   width:320px
   height:240px
 
-#canvas
+#canvas1
   display:none
 
-.camera
-  width: 340px
+#camera1, #camera2
+  width: 100%
   float: left
 
 .output
@@ -22,7 +22,6 @@
 
 #startbutton, #startbutton1
   display:block
-  position:relative
   margin-left:auto
   margin-right:auto
   bottom:32px
@@ -32,3 +31,12 @@
   font-size: 14px
   font-family: "Lucida Grande", "Arial", sans-serif
   color: rgba(255, 255, 255, 1.0)
+
+#camera-1-form
+    margin-bottom: 30px
+
+.photoDiv
+    float: left
+    width: 50%
+    img
+        width:100%
