--- a/web/src/views/pages/add-face.pug
+++ b/web/src/views/pages/add-face.pug
@@ -25,6 +25,8 @@ block main
           img(id="video1" src="http://localhost:8082" alt="Недоступно")
           button#startbutton2 Снимок
 
+      button(id="recognize") Распознать
+
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js')
     script(src='/scripts/camera1.js')
     script(src='/scripts/camera2.js')
